Added review editing, deletion and reporting. Added notification badge. Barbers recieve notifications when a user submits order or creates review. Carts are now individual to each account. Added logout endpoint and a button on AccountPage that triggers it. Altered DB a bit, added some JS attractions and other little details.

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -19,9 +19,10 @@
     <Routes />
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js?v=@(MudBlazor.Metadata.Version)"></script>
-    <script src="login.js"></script>
+    <script src="auth.js"></script>
     <script src="localStorageHelper.js"></script>
     <script src="timeline.js"></script>
+    <script src="reviewReport.js"></script>
 </body>
 
 </html>
