--- a/Components/Pages/CartPage.razor
+++ b/Components/Pages/CartPage.razor
@@ -1,4 +1,5 @@
-﻿@using barberchainAPI.Functional
+﻿@namespace barberchainAPI.Components.Pages
+@using barberchainAPI.Functional
 @inject BarberchainDbContext Context
 @inject CartService CartService
 
