--- a/Components/Pages/OrderHistroy.razor
+++ b/Components/Pages/OrderHistroy.razor
@@ -1,4 +1,5 @@
-﻿@inject BarberchainDbContext Context
+﻿@namespace barberchainAPI.Components.Pages
+@inject BarberchainDbContext Context
 @using MudBlazor
 
 @if (OrderList?.Count > 0)
