--- a/Components/Pages/AuthPage.razor
+++ b/Components/Pages/AuthPage.razor
@@ -1,4 +1,5 @@
-﻿@page "/auth"
+﻿@namespace barberchainAPI.Components.Pages
+@page "/auth"
 @rendermode InteractiveServer
 @using MudBlazor
 @using System.Text.RegularExpressions
