--- a/Components/Pages/BarbershopPage.razor
+++ b/Components/Pages/BarbershopPage.razor
@@ -1,4 +1,5 @@
-﻿@page "/barbershop/{Id:int}"
+﻿@namespace barberchainAPI.Components.Pages
+@page "/barbershop/{Id:int}"
 @rendermode InteractiveServer
 @using barberchainAPI.Functional
 @inject NavigationManager Navigation
