--- a/Components/Pages/Error.razor
+++ b/Components/Pages/Error.razor
@@ -1,4 +1,5 @@
-﻿@page "/Error"
+﻿@namespace barberchainAPI.Components.Pages
+@page "/Error"
 @using System.Diagnostics
 
 <PageTitle>Error</PageTitle>
