--- a/Components/Pages/Notifications.razor
+++ b/Components/Pages/Notifications.razor
@@ -1,5 +1,4 @@
-﻿@inject BarberchainDbContext Context
-
+﻿@namespace barberchainAPI.Components.Pages
 @inject BarberchainDbContext Context
 
 @if (NotificationList?.Count > 0)
@@ -46,8 +45,7 @@ else
 {
     <MudPaper Elevation="3" Class="p-4 rounded-lg" style="text-align:center;">
         <MudIcon Icon="@Icons.Material.Filled.NotificationsOff" Color="Color.Secondary" Size="Size.Large" />
-        <MudText Typo="Typo.h6" class="mt-2">No notifications</MudText>
-        <MudText Typo="Typo.body2">You're all caught up!</MudText>
+        <MudText Typo="Typo.h6" class="mt-2">Нет уведомлений</MudText>
     </MudPaper>
 }
 
