--- a/Components/Pages/PaymentSuccess.razor
+++ b/Components/Pages/PaymentSuccess.razor
@@ -1,4 +1,5 @@
-﻿@using MudBlazor
+﻿@namespace barberchainAPI.Components.Pages
+@using MudBlazor
 @inject NavigationManager Navigation
 @inject BarberchainDbContext Context
 
