--- a/Components/Pages/Weather.razor
+++ b/Components/Pages/Weather.razor
@@ -1,4 +1,5 @@
-﻿@page "/weather"
+﻿@namespace barberchainAPI.Components.Pages
+@page "/weather"
 @attribute [StreamRendering]
 
 <PageTitle>Weather</PageTitle>
